# MadDevs_test

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/html_fragmenter/: exceptions.py  msg_split.py
tests/: test_msg_split.py
tests/data/: complex.html  nested.html  simple.html
